Changes the package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nako-color-theme",
+    "name": "nako",
     "displayName": "Nako",
     "description": "Elegant and contrast Visual Studio Code theme inspired by Vercel.",
     "version": "0.0.1",
