--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "categories": [
         "Themes"
     ],
+    "icon": "nako-icon.png",
     "galleryBanner": {
         "color": "#161A1D",
         "theme": "dark"
