--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@ossjs/release": "^0.3.2"
+    "@ossjs/release": "^0.3.2",
+    "vsce": "^2.10.0"
   }
 }
